After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784341 - Fixes to touchscreen mapping on wayland
Fixes to touchscreen mapping on wayland
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: xrandr
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Debarshi Ray
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2017-06-29 14:19 UTC by Carlos Garnacho
Modified: 2017-07-12 21:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
common: Fix typo in udev GsdDeviceManager implementation (1.29 KB, patch)
2017-06-29 14:20 UTC, Carlos Garnacho
committed Details | Review
common: Try harder to get devices' vendor/product from udev (1.33 KB, patch)
2017-06-29 14:20 UTC, Carlos Garnacho
committed Details | Review

Description Carlos Garnacho 2017-06-29 14:19:20 UTC
Attaching a couple of patches. The first one unbreaks the input/output physical size heuristics that are necessary if there's more than one output. I found the second patch helping with some touchscreens I've got for testing, as those apparently don't get the udev vendor/model properties that we expect here.
Comment 1 Carlos Garnacho 2017-06-29 14:20:36 UTC
Created attachment 354691 [details] [review]
common: Fix typo in udev GsdDeviceManager implementation

This would yield the wrong size, specially harmful for touchscreens as
there's no other backing heuristic here. This may result in touchscreens
being assigned the wrong output if there's several of them.
Comment 2 Carlos Garnacho 2017-06-29 14:20:42 UTC
Created attachment 354692 [details] [review]
common: Try harder to get devices' vendor/product from udev

If the device has no ID_VENDOR_ID/ID_MODEL_ID udev properties, resort
to reading those from sysfs attributes.
Comment 3 Rui Matos 2017-07-06 16:21:53 UTC
Review of attachment 354691 [details] [review]:

oops ++
Comment 4 Rui Matos 2017-07-06 16:27:23 UTC
Review of attachment 354692 [details] [review]:

ok
Comment 5 Carlos Garnacho 2017-07-12 21:22:58 UTC
Both are pushed now, thanks!

Attachment 354691 [details] pushed as d0ff814 - common: Fix typo in udev GsdDeviceManager implementation
Attachment 354692 [details] pushed as b1d12b0 - common: Try harder to get devices' vendor/product from udev