common: Fix typo in udev GsdDeviceManager implementation

This would yield the wrong size, specially harmful for touchscreens as
there's no other backing heuristic here. This may result in touchscreens
being assigned the wrong output if there's several of them.

https://bugzilla.gnome.org/show_bug.cgi?id=784341